# kbee

./: .envrc  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCUMENTATION  LICENSE-HARDWARE  Makefile  README.md  SECURITY.md  THIRD_PARTY.md  flake.nix
.cursor/rules/: anadigm-cam-kb.mdc  commit-message-footer.mdc  kbee-conventions.mdc  nixos-repo.mdc  public-repo.mdc  readme-title.mdc
.githooks/: pre-push
.github/: FUNDING.yml
asic/: README.md
asic/data/: README.md  params.scl
asic/designs/: README.md
asic/docs/: phase-02-fabric.md  summary.md
asic/layout/: kbee_tile.md
asic/scripts/: README.md  check-vs-csv.py  compare-ngspice-fabric.py  run-sim.sh
data/: README.md
docs/: LICENSE  REPO_LAYOUT.md  ad2-conventions.md  base-n-nminus1-algorithm.md  pandoc-metadata.yaml  sim-voltage-examples.md  summary.md
fpaa/: LICENSE
fpga/: README.md  dune  dune-project
fpga/docs/: time-model.md
fpga/lib/: dune  kbee_cell.ml  kbee_cell_sim.ml  kbee_system.ml  kbee_system_sim.ml  kbee_top.ml  lag.ml  oracle_lag.ml  oracle_pause_counter.ml  oracle_pause_primitives.ml  oracle_pause_sim.ml  params.ml  pausable_sampler.ml  pause_counter.ml  pause_primitives.ml  pause_sim.ml  sawtooth.ml  sim_util.ml
fpga/nix/: overlay.nix
fpga/test/: dune  test_kbee_cell.ml  test_kbee_sum.ml  test_pause.ml  test_sawtooth.ml
nix/: fpga-pkgs.nix  python.nix  shells.nix
proofs/: Kbee.lean  README.md  lake-manifest.json  lakefile.toml
python/: LICENSE  README.md  kbee.py
scripts/: add_headers.py  gen-kbee-base4-w4-refs.py  gen-kbee-refs.py
(+58 files in other folders)
