(lang dune 3.17)
; SPDX-License-Identifier: LGPL-3.0-or-later
; Copyright (c) 2026 Karoshibee LTD

(name kbee_fpga)

(generate_opam_files true)

(package
 (name kbee_fpga)
 (synopsis "KBee base-N logic — digital FPGA implementation (Hardcaml)")
 (depends
  (ocaml
   (>= 5.3.0))
  dune
  core
  hardcaml
  ounit2
  ppx_jane
  ppxlib))
